welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:29: warning: enclosing method estPositionFinale has result type Unit: return value discarded
  return (murAuNord && estFaceMur())
  ^SnakeBuggle:35: error: value unary_! is not a member of Unit
  while (!estPositionFinale()) {
         ^